honestly not sure, did some styling and what not, was trying to fix the way the social bar wrapped on smaller screens, it sorta works better now

--- a/css/general.css
+++ b/css/general.css
@@ -6,7 +6,10 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    flex-grow: 0;
     justify-content: center;
+    /*flex-shrink: 1;*/
+    float: right;
 
 }
 
@@ -63,4 +66,7 @@ body {
     flex-direction: column;
     flex-wrap: nowrap;
     margin: 0px;
+}
+
+.links-bar {
 }
